# Garderobot

./: .gitignore  .gitmodules  README.md
demo/: CMakeLists.txt  build.sh  carousel.cpp  carousel.py  movement_ur5.py
garderobot_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
garderobot_ws/devel/include/shared_serial/: Close.h  ConnectRequest.h  ConnectResponse.h  Flush.h  RecvRequest.h  RecvResponse.h  Send.h  SendRecvRequest.h  SendRecvResponse.h  SendToRequest.h  SendToResponse.h
garderobot_ws/devel/include/ur_msgs/: Analog.h  Digital.h  IOStates.h  MasterboardDataMsg.h  RobotStateRTMsg.h  SetIORequest.h  SetIOResponse.h  SetPayloadRequest.h  SetPayloadResponse.h
garderobot_ws/devel/share/shared_serial/cmake/: shared_serial-msg-extras.cmake  shared_serial-msg-paths.cmake  shared_serialConfig.cmake
garderobot_ws/devel/share/threemxl/cmake/: threemxlConfig.cmake
garderobot_ws/devel/share/threemxl_control/cmake/: threemxl_controlConfig.cmake
garderobot_ws/devel/share/ur10_moveit_config/cmake/: ur10_moveit_configConfig.cmake
garderobot_ws/devel/share/ur3_moveit_config/cmake/: ur3_moveit_configConfig.cmake
garderobot_ws/devel/share/ur5/cmake/: ur5Config.cmake
garderobot_ws/install/: .rosinstall  setup.sh
garderobot_ws/src/threemxl_control/: CMakeLists.txt  package.xml
garderobot_ws/src/threemxl_control/src/: carousel.cpp  movement_publisher.cpp  threemxl_control.cpp
garderobot_ws/src/ur5/: CMakeLists.txt  package.xml
garderobot_ws/src/ur5/scripts/: listener.py  talker.py  ur5_test.py
(+32 files in other folders)
